for performance reasons simplified a bunch of (un)boxing cases